--- a/frontend/src/locales/ja.json
+++ b/frontend/src/locales/ja.json
@@ -29,13 +29,7 @@
     "add_to_collection": "コレクションに追加します",
     "adventure": "アドベンチャー",
     "adventure_calendar": "アドベンチャーカレンダー",
-    "adventure_create_error": "",
-    "adventure_created": "",
-    "adventure_delete_confirm": "",
-    "adventure_delete_success": "",
     "adventure_not_found": "展示する冒険はありません。\n右下のプラスボタンを使用していくつかを追加するか、フィルターを変更してみてください！",
-    "adventure_update_error": "",
-    "adventure_updated": "",
     "adventures_available": "利用可能な冒険",
     "all": "全て",
     "all_adventures_already_linked": "すべての冒険はすでにこのコレクションにリンクされています。",
@@ -76,15 +70,11 @@
     "collection_archived": "このコレクションはアーカイブされています。",
     "collection_completed": "あなたはこのコレクションを完成させました！",
     "collection_contents": "コレクションの内容",
-    "collection_link_error": "",
     "collection_link_location_error": "場所をコレクションにリンクするエラー",
     "collection_link_location_success": "コレクションに正常にリンクされている場所！",
-    "collection_link_success": "",
     "collection_locations": "収集場所を含めます",
     "collection_no_start_end_date": "コレクションに開始日と終了日を追加すると、コレクションページの旅程計画機能が解除されます。",
-    "collection_remove_error": "",
     "collection_remove_location_error": "コレクションから場所を削除するエラー",
-    "collection_remove_success": "",
     "collection_stats": "コレクション統計",
     "collections_linked": "リンクされたコレクション",
     "coordinates": "座標",
@@ -93,7 +83,6 @@
     "copy_failed": "コピーが失敗しました",
     "copy_link": "リンクをコピーします",
     "count_txt": "あなたの検索に一致する結果",
-    "create_adventure": "",
     "create_collection_first": "最初にコレクションを作成して、冒険と思い出を整理します。",
     "create_location": "場所を作成します",
     "create_new": "新しい...",
@@ -105,7 +94,6 @@
     "day": "日",
     "days": "日",
     "delete": "消去",
-    "delete_adventure": "",
     "delete_checklist": "チェックリストを削除します",
     "delete_collection": "コレクションを削除します",
     "delete_collection_success": "コレクションが正常に削除されました！",
@@ -188,12 +176,9 @@
     "my_images": "私の画像",
     "name": "名前",
     "name_location": "名前、場所",
-    "new_adventure": "",
     "new_location": "新しい場所",
     "no_adventures_found": "冒険は見つかりませんでした",
     "no_adventures_message": "冒険の文書化と新しいものの計画を開始します。\nすべての旅には、語る価値のある物語があります。",
-    "no_adventures_to_recommendations": "",
-    "no_collections_found": "",
     "no_collections_to_add_location": "この場所を追加するコレクションは見つかりませんでした。",
     "no_description_found": "説明は見つかりません",
     "no_image_found": "画像が見つかりません",
@@ -207,8 +192,6 @@
     "no_ordered_items": "コレクションに日付のあるアイテムを追加して、こちらをご覧ください。",
     "no_results": "結果は見つかりませんでした",
     "no_visits": "訪問はありません",
-    "not_found": "",
-    "not_found_desc": "",
     "not_visited": "訪問されていません",
     "note": "注記",
     "note_delete_confirm": "このメモを削除したいですか？\nこのアクションを元に戻すことはできません。",
@@ -226,7 +209,6 @@
     "price": "価格",
     "private": "プライベート",
     "public": "公共",
-    "public_adventure": "",
     "public_location": "公共の場所",
     "quick_start": "クイックスタート",
     "rating": "評価",
@@ -241,7 +223,6 @@
     "see_adventures": "冒険を参照してください",
     "set_to_pin": "ピンに設定します",
     "share": "共有",
-    "share_adventure": "",
     "share_collection": "このコレクションを共有してください！",
     "share_location": "この場所を共有してください！",
     "show": "見せる",
@@ -279,11 +260,9 @@
     "visited_region_check_desc": "これを選択することにより、サーバーは訪問したすべての冒険をチェックし、世界旅行で訪れたとおりにある地域をマークします。",
     "visits": "訪問",
     "warning": "警告",
-    "wiki_desc": "",
     "wiki_image_error": "ウィキペディアからの画像の取得エラー",
     "wiki_location_desc": "場所の名前と一致するウィキペディアの記事からの抜粋を引き出します。",
     "wikipedia": "ウィキペディア",
-    "will_be_marked": "",
     "will_be_marked_location": "場所が保存されると、訪問としてマークされます。",
     "collection_remove_location_success": "コレクションから正常に削除された場所！",
     "my_adventures": "私の冒険"
@@ -297,7 +276,6 @@
     "login": "ログイン",
     "login_error": "提供された資格情報でログインできません。",
     "new_password": "新しいパスワード（6文字）",
-    "no_public_adventures": "",
     "no_public_collections": "公開コレクションは見つかりませんでした",
     "no_public_locations": "公共の場所は見つかりません",
     "or_3rd_party": "または、サードパーティのサービスでログインします",
@@ -306,20 +284,16 @@
     "public_tooltip": "パブリックプロフィールを使用すると、ユーザーはコレクションを共有して、ユーザーページでプロフィールを表示できます。",
     "registration_disabled": "登録は現在無効になっています。",
     "signup": "サインアップ",
-    "user_adventures": "",
     "user_collections": "ユーザーコレクション",
     "user_locations": "ユーザーの場所",
     "username": "ユーザー名",
     "password": "パスワード"
   },
   "calendar": {
-    "all_categories": "",
     "all_day_event": "終日イベント",
     "calendar_overview": "カレンダーの概要",
-    "categories": "",
     "day": "日",
     "events_scheduled": "スケジュールされたイベント",
-    "filter_by_category": "",
     "filtered_results": "フィルタリングされた結果",
     "month": "月",
     "today": "今日",
@@ -335,8 +309,7 @@
     "manage_categories": "カテゴリを管理します",
     "name_required": "カテゴリ名が必要です",
     "no_categories_found": "カテゴリは見つかりません。",
-    "select_category": "カテゴリを選択します",
-    "update_after_refresh": ""
+    "select_category": "カテゴリを選択します"
   },
   "checklist": {
     "checklist_delete_error": "チェックリストを削除するエラー",
@@ -476,7 +449,6 @@
     "add_location_at_marker": "マーカーに新しい場所を追加します",
     "adventure_map": "アドベンチャーマップ",
     "adventure_stats": "冒険の統計",
-    "adventures_shown": "",
     "clear_marker": "クリアマーカー",
     "completion": "完了",
     "display_options": "オプションを表示します",
@@ -485,7 +457,6 @@
     "map_controls": "マップコントロール",
     "map_options": "マップオプション",
     "marker_placed_on_map": "マップ上に配置されたマーカー",
-    "place_marker_desc": "",
     "place_marker_desc_location": "マップをクリックしてマーカーを配置します。",
     "regions": "地域",
     "show_visited_regions": "訪問した地域を表示します",
@@ -546,7 +517,6 @@
     "no_shared_adventures": "このユーザーは、まだ公開の冒険を共有していません。",
     "no_shared_collections": "このユーザーはまだ公開コレクションを共有していません。",
     "planned_trips": "計画された旅行",
-    "public_adventure_experiences": "",
     "public_location_experiences": "パブリックロケーションエクスペリエンス",
     "travel_statistics": "旅行統計",
     "user_stats": "ユーザーの統計",
@@ -556,7 +526,6 @@
     "your_journey_at_a_glance": "あなたの冒険の旅は一目で"
   },
   "recomendations": {
-    "adventure_recommendations": "",
     "food": "食べ物",
     "location_recommendations": "場所の推奨事項",
     "recommendation": "おすすめ",
