--- a/frontend/src/locales/ru.json
+++ b/frontend/src/locales/ru.json
@@ -311,7 +311,14 @@
     "wiki_location_desc": "Вытягивает отрывок из статьи Википедии, соответствующей названию места.",
     "will_be_marked_location": "будет отмечен по посещению после сохранения местоположения.",
     "no_locations_found": "Никаких мест не найдено",
-    "image_modal_navigate": "Используйте клавиши со стрелками или нажмите, чтобы перемещаться"
+    "image_modal_navigate": "Используйте клавиши со стрелками или нажмите, чтобы перемещаться",
+    "details": "Подробности",
+    "leave": "Оставлять",
+    "leave_collection": "Оставить коллекцию",
+    "leave_collection_warning": "Вы уверены, что хотите покинуть эту коллекцию? \nЛюбые места, которые вы добавили, будут не связаны и останутся в вашей учетной записи.",
+    "left_collection_message": "Успешно оставил коллекцию",
+    "loading_collections": "Загрузка коллекций ...",
+    "quick_start": "Быстрый старт"
   },
   "worldtravel": {
     "country_list": "Список стран",
@@ -535,7 +542,11 @@
     "restore_data": "Восстановить данные",
     "restore_data_desc": "Загрузите файл резервного копирования, чтобы восстановить ваши данные.",
     "select_backup_file": "Выберите файл резервного копирования",
-    "world_travel_visits": "Всемирные поездки"
+    "world_travel_visits": "Всемирные поездки",
+    "activities": "Деятельность",
+    "trails": "Тропы",
+    "use_imperial": "Используйте имперские подразделения",
+    "use_imperial_desc": "Используйте имперские единицы (ноги, дюймы, фунты) вместо метрических единиц"
   },
   "collection": {
     "collection_created": "Коллекция успешно создана!",
@@ -665,7 +676,11 @@
     "not_shared_with": "Не поделено с",
     "no_shared_found": "Не найдено коллекций, которыми с вами поделились.",
     "set_public": "Чтобы пользователи могли делиться с вами, вам нужно сделать ваш профиль публичным.",
-    "go_to_settings": "Перейти к настройкам"
+    "go_to_settings": "Перейти к настройкам",
+    "available": "Доступный",
+    "pending": "В ожидании",
+    "revoke_invite": "Отменить приглашение",
+    "send_invite": "Отправить приглашение"
   },
   "languages": {},
   "profile": {
@@ -736,7 +751,8 @@
     "network_error": "Сетевая ошибка при подключении к серверу Immich. Пожалуйста, проверьте ваше соединение и попробуйте еще раз."
   },
   "google_maps": {
-    "google_maps_integration_desc": "Подключите ваш аккаунт Google Maps для получения высококачественных результатов поиска местоположений и рекомендаций."
+    "google_maps_integration_desc": "Подключите ваш аккаунт Google Maps для получения высококачественных результатов поиска местоположений и рекомендаций.",
+    "google_maps_integration_desc_no_staff": "Эта интеграция должна сначала быть включена администратором на этом сервере."
   },
   "recomendations": {
     "recommendation": "Рекомендация",
@@ -761,5 +777,36 @@
     "locations": "Локации",
     "my_locations": "Мои локации"
   },
-  "settings_download_backup": "Скачать резервную копию"
+  "settings_download_backup": "Скачать резервную копию",
+  "invites": {
+    "accept": "Принимать",
+    "accept_failed": "Не удалось принять приглашение",
+    "accepted": "Пригласить принятый",
+    "by": "к",
+    "decline": "Отклонить",
+    "decline_failed": "Не удалось отказаться пригласить",
+    "declined": "Пригласить отклонено",
+    "invited_on": "Приглашен",
+    "no_invites": "Нет приглашений",
+    "no_invites_desc": "Убедитесь, что ваш профиль является общедоступным, чтобы пользователи могли пригласить вас.",
+    "pending_invites": "В ожидании приглашений",
+    "title": "Приглашает"
+  },
+  "strava": {
+    "account_connected": "Учетная запись подключена",
+    "admin_setup_required": "Администратор сервера должен включить его во всем мире",
+    "authorization_error": "Перенаправление ошибки на URL авторизации Strava",
+    "connect_account": "Подключить учетную запись",
+    "disconnect": "Отключить",
+    "disconnect_error": "Ошибка отключения от Strava",
+    "disconnected": "Успешно отключен от Strava",
+    "not_configured": "Страва не настроен",
+    "ready_to_connect": "Готов к подключению",
+    "strava_integration_desc": "Подключитесь к Strava, чтобы легко импортировать ваши активации в места и посещения"
+  },
+  "wanderer": {
+    "connected": "Успешно связанный с Wanderer",
+    "connection_error": "Ошибка подключения к Wanderer",
+    "wanderer_integration_desc": "Подключитесь к Wanderer, чтобы легко импортировать и просмотреть ваши следы в местах"
+  }
 }
