--- a/frontend/src/locales/ar.json
+++ b/frontend/src/locales/ar.json
@@ -29,13 +29,7 @@
     "add_to_collection": "إضافة إلى المجموعة",
     "adventure": "مفامرة",
     "adventure_calendar": "تقويم المغامرة",
-    "adventure_create_error": "",
-    "adventure_created": "",
-    "adventure_delete_confirm": "",
-    "adventure_delete_success": "",
     "adventure_not_found": "لا توجد مغامرات لعرضها. \nأضف بعضًا باستخدام الزر Plus في أسفل اليمين أو حاول تغيير المرشحات!",
-    "adventure_update_error": "",
-    "adventure_updated": "",
     "adventures_available": "المغامرات المتاحة",
     "all": "الجميع",
     "all_adventures_already_linked": "جميع المغامرات مرتبطة بالفعل بهذه المجموعة.",
@@ -76,23 +70,18 @@
     "collection_archived": "تم أرشفة هذه المجموعة.",
     "collection_completed": "لقد أكملت هذه المجموعة!",
     "collection_contents": "محتويات جمع",
-    "collection_link_error": "",
     "collection_link_location_error": "خطأ في ربط الموقع بالجمع",
     "collection_link_location_success": "الموقع مرتبط بجمع بنجاح!",
-    "collection_link_success": "",
     "collection_locations": "تشمل مواقع التجميع",
     "collection_no_start_end_date": "ستؤدي إضافة تاريخ البدء والنهاية إلى المجموعة إلى إلغاء قفل ميزات تخطيط خط الرحلة في صفحة التجميع.",
-    "collection_remove_error": "",
     "collection_remove_location_error": "خطأ إزالة الموقع من المجموعة",
     "collection_remove_location_success": "الموقع تمت إزالته من المجموعة بنجاح!",
-    "collection_remove_success": "",
     "collection_stats": "إحصائيات التجميع",
     "collections_linked": "مجموعات مرتبطة",
     "coordinates": "الإحداثيات",
     "copied_to_clipboard": "نسخ إلى الحافظة!",
     "copy_coordinates": "نسخ الإحداثيات",
     "copy_failed": "فشل النسخة",
-    "create_adventure": "",
     "create_new": "إنشاء جديد ...",
     "date": "تاريخ",
     "date_constrain": "تقييد تواريخ التجميع",
@@ -102,7 +91,6 @@
     "day": "يوم",
     "days": "أيام",
     "delete": "يمسح",
-    "delete_adventure": "",
     "delete_checklist": "حذف قائمة المراجعة",
     "delete_collection": "حذف المجموعة",
     "delete_collection_success": "تم حذف المجموعة بنجاح!",
@@ -186,12 +174,9 @@
     "my_images": "صوري",
     "name": "اسم",
     "name_location": "الاسم ، الموقع",
-    "new_adventure": "",
     "new_location": "موقع جديد",
     "no_adventures_found": "لم يتم العثور على مغامرات",
     "no_adventures_message": "ابدأ في توثيق مغامراتك والتخطيط لمغامراتك الجديدة. \nكل رحلة لديها قصة تستحق سرد.",
-    "no_adventures_to_recommendations": "",
-    "no_collections_found": "",
     "no_collections_to_add_location": "لم يتم العثور على مجموعات لإضافة هذا الموقع إلى.",
     "no_description_found": "لم يتم العثور على وصف",
     "no_image_found": "لم يتم العثور على صورة",
@@ -205,8 +190,6 @@
     "no_ordered_items": "أضف عناصر مع تواريخ إلى المجموعة لرؤيتها هنا.",
     "no_results": "لم يتم العثور على نتائج",
     "no_visits": "لا زيارات",
-    "not_found": "",
-    "not_found_desc": "",
     "not_visited": "لم يزور",
     "note": "ملحوظة",
     "note_delete_confirm": "هل أنت متأكد من أنك تريد حذف هذه الملاحظة؟ \nلا يمكن التراجع عن هذا الإجراء.",
@@ -224,7 +207,6 @@
     "price": "سعر",
     "private": "خاص",
     "public": "عام",
-    "public_adventure": "",
     "public_location": "موقع عام",
     "quick_start": "بداية سريعة",
     "rating": "تصنيف",
@@ -239,7 +221,6 @@
     "see_adventures": "انظر المغامرات",
     "set_to_pin": "ضبط على دبوس",
     "share": "يشارك",
-    "share_adventure": "",
     "share_collection": "شارك هذه المجموعة!",
     "share_location": "شارك هذا الموقع!",
     "show": "يعرض",
@@ -277,11 +258,9 @@
     "visited_region_check_desc": "من خلال اختيار ذلك ، سيقوم الخادم بفحص جميع مغامراتك التي تمت زيارتك وتمييز المناطق التي تقع فيها كما تمت زيارتها في World Travel.",
     "visits": "زيارات",
     "warning": "تحذير",
-    "wiki_desc": "",
     "wiki_image_error": "خطأ جلب الصورة من ويكيبيديا",
     "wiki_location_desc": "يسحب مقتطفات من مقالة ويكيبيديا تطابق اسم الموقع.",
     "wikipedia": "ويكيبيديا",
-    "will_be_marked": "",
     "will_be_marked_location": "سيتم تمييزها كما تمت زيارتها بمجرد حفظ الموقع.",
     "copy_link": "نسخ الوصلة",
     "count_txt": "النتائج مطابقة بحثك",
@@ -297,7 +276,6 @@
     "login": "تسجيل الدخول",
     "login_error": "غير قادر على تسجيل الدخول مع بيانات الاعتماد المقدمة.",
     "new_password": "كلمة مرور جديدة (6 أحرف)",
-    "no_public_adventures": "",
     "no_public_collections": "لم يتم العثور على مجموعات عامة",
     "no_public_locations": "لم يتم العثور على مواقع عامة",
     "or_3rd_party": "أو تسجيل الدخول مع خدمة طرف ثالث",
@@ -307,19 +285,15 @@
     "public_tooltip": "باستخدام ملف تعريف عام ، يمكن للمستخدمين مشاركة المجموعات معك وعرض ملفك الشخصي على صفحة المستخدمين.",
     "registration_disabled": "التسجيل معاق حاليا.",
     "signup": "اشتراك",
-    "user_adventures": "",
     "user_collections": "مجموعات المستخدم",
     "user_locations": "مواقع المستخدم",
     "username": "اسم المستخدم"
   },
   "calendar": {
-    "all_categories": "",
     "all_day_event": "الحدث طوال اليوم",
     "calendar_overview": "نظرة عامة على التقويم",
-    "categories": "",
     "day": "يوم",
     "events_scheduled": "الأحداث المجدولة",
-    "filter_by_category": "",
     "filtered_results": "النتائج التي تمت تصفيتها",
     "month": "شهر",
     "today": "اليوم",
@@ -335,8 +309,7 @@
     "manage_categories": "إدارة الفئات",
     "name_required": "اسم الفئة مطلوب",
     "no_categories_found": "لم يتم العثور على فئات.",
-    "select_category": "حدد الفئة",
-    "update_after_refresh": ""
+    "select_category": "حدد الفئة"
   },
   "checklist": {
     "checklist_delete_error": "خطأ حذف قائمة المراجعة",
@@ -476,7 +449,6 @@
     "add_location_at_marker": "أضف موقعًا جديدًا في Marker",
     "adventure_map": "خريطة المغامرة",
     "adventure_stats": "احصائيات المغامرة",
-    "adventures_shown": "",
     "clear_marker": "علامة واضحة",
     "completion": "انتهاء",
     "display_options": "عرض خيارات",
@@ -485,7 +457,6 @@
     "map_controls": "أدوات التحكم في الخريطة",
     "map_options": "خيارات الخريطة",
     "marker_placed_on_map": "وضعت علامة على الخريطة",
-    "place_marker_desc": "",
     "place_marker_desc_location": "انقر على الخريطة لوضع علامة.",
     "regions": "المناطق",
     "show_visited_regions": "عرض المناطق التي تمت زيارتها",
@@ -546,7 +517,6 @@
     "no_shared_adventures": "لم يشارك هذا المستخدم أي مغامرات عامة حتى الآن.",
     "no_shared_collections": "لم يشارك هذا المستخدم أي مجموعات عامة حتى الآن.",
     "planned_trips": "الرحلات المخطط لها",
-    "public_adventure_experiences": "",
     "public_location_experiences": "تجارب الموقع العام",
     "travel_statistics": "إحصائيات السفر",
     "user_stats": "إحصائيات المستخدم",
@@ -556,7 +526,6 @@
     "your_journey_at_a_glance": "رحلة مغامرتك في لمحة"
   },
   "recomendations": {
-    "adventure_recommendations": "",
     "food": "طعام",
     "location_recommendations": "توصيات الموقع",
     "recommendation": "توصية",
