--- a/frontend/src/locales/fr.json
+++ b/frontend/src/locales/fr.json
@@ -259,7 +259,14 @@
     "wiki_location_desc": "Tire un extrait de l'article de Wikipedia correspondant au nom de l'emplacement.",
     "will_be_marked_location": "sera marqué comme visité une fois l'emplacement enregistré.",
     "no_locations_found": "Aucun emplacement trouvé",
-    "image_modal_navigate": "Utilisez des touches flèches ou cliquez pour naviguer"
+    "image_modal_navigate": "Utilisez des touches flèches ou cliquez pour naviguer",
+    "details": "Détails",
+    "leave": "Partir",
+    "leave_collection": "Collecte de congé",
+    "leave_collection_warning": "Êtes-vous sûr de vouloir quitter cette collection? \nTous les emplacements que vous avez ajoutés seront non liés et resteront dans votre compte.",
+    "left_collection_message": "Collection de gauche avec succès",
+    "loading_collections": "Chargement des collections ...",
+    "quick_start": "Démarrage rapide"
   },
   "home": {
     "desc_1": "Découvrez, planifiez et explorez en toute simplicité",
@@ -535,7 +542,11 @@
     "restore_data": "Restaurer les données",
     "restore_data_desc": "Téléchargez un fichier de sauvegarde pour restaurer vos données.",
     "select_backup_file": "Sélectionnez le fichier de sauvegarde",
-    "world_travel_visits": "Visites de voyage dans le monde"
+    "world_travel_visits": "Visites de voyage dans le monde",
+    "activities": "Activités",
+    "trails": "Sentiers",
+    "use_imperial": "Utilisez des unités impériales",
+    "use_imperial_desc": "Utilisez des unités impériales (pieds, pouces, livres) au lieu d'unités métriques"
   },
   "checklist": {
     "checklist_delete_error": "Erreur lors de la suppression de la liste de contrôle",
@@ -649,7 +660,11 @@
     "with": "avec",
     "go_to_settings": "Allez dans les paramètres",
     "no_shared_found": "Aucune collection ne semble encore avoir été partagée avec vous.",
-    "set_public": "Afin de permettre aux utilisateurs de partager avec vous, vous devez rendre votre profil public."
+    "set_public": "Afin de permettre aux utilisateurs de partager avec vous, vous devez rendre votre profil public.",
+    "available": "Disponible",
+    "pending": "En attente",
+    "revoke_invite": "Revoke Inviter",
+    "send_invite": "Envoyer l'invitation"
   },
   "profile": {
     "member_since": "Membre depuis",
@@ -743,7 +758,8 @@
     "villa": "Villa"
   },
   "google_maps": {
-    "google_maps_integration_desc": "Connectez votre compte Google Maps pour obtenir des résultats de recherche et recommandations de recherche de haute qualité."
+    "google_maps_integration_desc": "Connectez votre compte Google Maps pour obtenir des résultats de recherche et recommandations de recherche de haute qualité.",
+    "google_maps_integration_desc_no_staff": "Cette intégration doit d'abord être activée par l'administrateur sur ce serveur."
   },
   "calendar": {
     "all_day_event": "Événement toute la journée",
@@ -761,5 +777,36 @@
     "locations": "Lieux",
     "my_locations": "Mes emplacements"
   },
-  "settings_download_backup": "Télécharger la sauvegarde"
+  "settings_download_backup": "Télécharger la sauvegarde",
+  "invites": {
+    "accept_failed": "Échec de l'acceptation de l'invitation",
+    "accepted": "Inviter accepté",
+    "by": "par",
+    "decline": "Déclin",
+    "decline_failed": "Échec de refuser l'invitation",
+    "declined": "Invite a refusé",
+    "invited_on": "Invité",
+    "no_invites": "Aucune invitation",
+    "no_invites_desc": "Assurez-vous que votre profil est public afin que les utilisateurs puissent vous inviter.",
+    "pending_invites": "Invitations en attente",
+    "title": "Invitations",
+    "accept": "Accepter"
+  },
+  "strava": {
+    "account_connected": "Compte connecté",
+    "admin_setup_required": "L'administrateur du serveur doit l'activer à l'échelle mondiale",
+    "authorization_error": "Redirection d'erreur vers l'URL de l'autorisation Strava",
+    "connect_account": "Connecter le compte",
+    "disconnect": "Débrancher",
+    "disconnect_error": "Erreur de déconnexion de Strava",
+    "disconnected": "Déconnecté avec succès de Strava",
+    "not_configured": "Strava non configuré",
+    "ready_to_connect": "Prêt à se connecter",
+    "strava_integration_desc": "Connectez-vous à Strava pour importer facilement vos activités dans des emplacements et des visites"
+  },
+  "wanderer": {
+    "connected": "Connecté avec succès à Wanderer",
+    "connection_error": "Erreur de connexion à Wanderer",
+    "wanderer_integration_desc": "Connectez-vous à Wanderer pour importer facilement et afficher vos sentiers dans les endroits"
+  }
 }
