--- a/frontend/src/locales/nl.json
+++ b/frontend/src/locales/nl.json
@@ -259,7 +259,14 @@
     "wiki_location_desc": "Haalt fragment uit het Wikipedia -artikel dat overeenkomt met de naam van de locatie.",
     "will_be_marked_location": "wordt gemarkeerd als bezocht zodra de locatie is opgeslagen.",
     "no_locations_found": "Geen locaties gevonden",
-    "image_modal_navigate": "Gebruik pijltoetsen of klik om te navigeren"
+    "image_modal_navigate": "Gebruik pijltoetsen of klik om te navigeren",
+    "details": "Details",
+    "leave": "Vertrekken",
+    "leave_collection": "Verlaat de verzameling",
+    "leave_collection_warning": "Weet je zeker dat je deze collectie wilt verlaten? \nAlle locaties die u hebt toegevoegd, worden niet gekoppeld en blijven in uw account.",
+    "left_collection_message": "Succesvol linkse collectie",
+    "loading_collections": "Collecties laden ...",
+    "quick_start": "Snel begin"
   },
   "home": {
     "desc_1": "Ontdek, plan en verken met gemak",
@@ -535,7 +542,11 @@
     "restore_data": "Herstel gegevens",
     "restore_data_desc": "Upload een back -upbestand om uw gegevens te herstellen.",
     "select_backup_file": "Selecteer back -upbestand",
-    "world_travel_visits": "Wereldreizen bezoeken"
+    "world_travel_visits": "Wereldreizen bezoeken",
+    "activities": "Activiteiten",
+    "trails": "Paden",
+    "use_imperial": "Gebruik imperiale eenheden",
+    "use_imperial_desc": "Gebruik imperiale eenheden (voeten, inches, ponden) in plaats van metrische eenheden"
   },
   "checklist": {
     "checklist_delete_error": "Fout bij het verwijderen van de checklist",
@@ -649,7 +660,11 @@
     "with": "met",
     "go_to_settings": "Ga naar instellingen",
     "no_shared_found": "Er zijn geen collecties gevonden die met u zijn gedeeld.",
-    "set_public": "Om ervoor te zorgen dat gebruikers met u kunnen delen, moet uw profiel op openbaar zijn ingesteld."
+    "set_public": "Om ervoor te zorgen dat gebruikers met u kunnen delen, moet uw profiel op openbaar zijn ingesteld.",
+    "available": "Beschikbaar",
+    "pending": "In behandeling",
+    "revoke_invite": "Revoke uitnodigen",
+    "send_invite": "Stuur uitnodiging"
   },
   "profile": {
     "member_since": "Lid sinds",
@@ -743,7 +758,8 @@
     "villa": "Villa"
   },
   "google_maps": {
-    "google_maps_integration_desc": "Sluit uw Google Maps-account aan om zoekresultaten en aanbevelingen van hoge kwaliteit te krijgen."
+    "google_maps_integration_desc": "Sluit uw Google Maps-account aan om zoekresultaten en aanbevelingen van hoge kwaliteit te krijgen.",
+    "google_maps_integration_desc_no_staff": "Deze integratie moet eerst door de admin op deze server worden ingeschakeld."
   },
   "calendar": {
     "all_day_event": "De hele dag evenement",
@@ -761,5 +777,36 @@
     "locations": "Locaties",
     "my_locations": "Mijn locaties"
   },
-  "settings_download_backup": "Download back -up"
+  "settings_download_backup": "Download back -up",
+  "invites": {
+    "accept": "Accepteren",
+    "accept_failed": "Kan uitnodigen niet accepteren",
+    "accepted": "Nodig geaccepteerd uit",
+    "by": "door",
+    "decline": "Afwijzen",
+    "decline_failed": "Kan uitnodigen niet achteruitgaan",
+    "declined": "Uitnodiging weigeren",
+    "invited_on": "Uitgenodigd",
+    "no_invites": "Geen uitnodigingen",
+    "no_invites_desc": "Zorg ervoor dat uw profiel openbaar is, zodat gebruikers u kunnen uitnodigen.",
+    "pending_invites": "In afwachting van uitnodigingen",
+    "title": "Uitnodigen"
+  },
+  "strava": {
+    "account_connected": "Account verbonden",
+    "admin_setup_required": "De serverbeheerder moet het wereldwijd inschakelen",
+    "authorization_error": "Fout omleidend naar Strava Authorization URL",
+    "connect_account": "Verbind account",
+    "disconnect": "Loskoppelen",
+    "disconnect_error": "Fout bij het loskoppelen van Strava",
+    "disconnected": "Met succes losgekoppeld van Strava",
+    "not_configured": "Strava niet geconfigureerd",
+    "ready_to_connect": "Klaar om verbinding te maken",
+    "strava_integration_desc": "Maak verbinding met Strava om uw activties eenvoudig te importeren in locaties en bezoeken"
+  },
+  "wanderer": {
+    "connected": "Succesvol verbonden met Wanderer",
+    "connection_error": "Fout die verbinding maakt met Wanderer",
+    "wanderer_integration_desc": "Maak verbinding met Wanderer om eenvoudig uw paden op locaties te importeren en te bekijken"
+  }
 }
